--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
                     <h1><mark class="title-page"> Farmacja 4.0</mark></h1>
 
                     <h2><mark  class="title-page">W kierunku innowacyjnej gospodarki </mark></h2>
-                    <h4>// version: under review</br></h4>
-                    <br>
+
+
 </div>
 <!-- <div class="arrow bounce">
   <a class="fa fa-arrow-down fa-2x" href="#continue"></a>
@@ -173,112 +173,7 @@ Farmacja 4.0 - w kierunku innowacyjnej gospodarki
                 </div>
               <!-- </div> -->
             </div>
-                <div class="section section-tabs">
-                    <div class="container">
-                        <!--                nav tabs	             -->
-                        <!-- <div id="nav-tabs"> -->
-                        <div class="section text-center">
-                          <!-- <div class="icon icon-info">
-                              <img src='./assets/img/chapters.png'>
-                            </div> -->
-                            <div class="tematy-raportu">
-                            <h1 class='title'>TEMATY RAPORTU <hr></h1>
-</div>
-                              </div>
-                            </div>
-                          </div>
 
-                          <div class="container">
-                              <div class="section text-center">
-                <div class="features">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="info">
-                              <a href="#innowacje">
-                                <div class="icon icon-info">
-                                    <!-- <img src='./assets/img/idea.png'> -->
-                                    <img src='./assets/icons/innowacje.png'>
-                                    <!-- <i class="material-icons">chat</i> -->
-                                </div>
-                                <h4 class="info-title">Innowacje w sektorze farmaceutycznym</h4>
-<p>Innowacyjność to modus operandi przemysłu farmaceutycznego. Wynika ona m.in. z coraz bliższych związków sektora ze środowiskiem naukowym.
- </p></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="info">
-                              <a href="#biotech">
-
-                                <div class="icon icon-success">
-                                    <!-- <img src='./assets/img/dna.png'> -->
-                                    <img src='./assets/icons/biotechno.png'>
-
-                                    <!-- <i class="material-icons">verified_user</i> -->
-                                </div>
-                                <h4 class="info-title">Mariaż z biotechnologią</h4>
-                                <p>Produkcja leków biopodobnych, na którą stawia Polpharma, wymaga wysokiego zaawansowania technologicznego oraz dużych nakładów finansowych i organizacyjnych. </p></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="info">
-                              <a href="#industry4">
-
-                                <div class="icon icon-danger">
-                                  <!-- <img src='./assets/img/ind.png'> -->
-                                  <img src='./assets/icons/leki.png', width="100",height="100">
-
-                                    <!-- <i class="material-icons">fingerprint</i> -->
-                                </div>
-                                <h4 class="info-title">Bezpieczeństwo lekowe</h4>
-                                <p>W kontekście nadchodzących zmian demograficznych związanych ze starzeniem się społeczeństwa coraz większego znaczenia nabiera bezpieczeństwo lekowe kraju.</p></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="info">
-                              <a href="#generics">
-
-                                <div class="icon icon-danger">
-                                  <!-- <img src='./assets/img/generic.png'> -->
-                                  <img src='./assets/icons/kolka.png'>
-
-                                    <!-- <i class="material-icons">fingerprint</i> -->
-                                </div>
-                                <h4 class="info-title">Rozwój portfolio leków generycznych</h4>
-                                <p>Wbrew powszechnej opinii leki generyczne mogą być produkowane w innowacyjny sposób, z wykorzystaniem nowatorskich technologii w nowoczesnych zakładach produkcyjnych.</p></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="info">
-                              <a href="#hc">
-
-                                <div class="icon icon-danger">
-                                  <!-- <img src='./assets/img/hc.png'> -->
-
-                                  <img src='./assets/icons/ludzie.png'>
-                                    <!-- <i class="material-icons">fingerprint</i> -->
-                                </div>
-                                <h4 class="info-title">Inwestycje w kapitał ludzki</h4>
-                                <p>Stabilny poziom zatrudnienia i lepsze jakościowo miejsca pracy to cele Strategii na Rzecz Odpowiedzialnego Rozwoju. </p></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="info">
-                              <a href="#global">
-
-                                <div class="icon icon-danger">
-                                  <!-- <img src='./assets/img/global.png'> -->
-                                  <img src='./assets/icons/globalnie.png'>
-
-                                    <!-- <i class="material-icons">fingerprint</i> -->
-                                </div>
-                                <h4 class="info-title">Polpharma na rynkach globalnych</h4>
-                                <p>Dynamika rozwoju rynku leków równoważnych za granicą ma kluczowe znaczenie dla rynku farmaceutycznego. Globalny trend wzrostu handlu tymi lekami tworzy możliwości ekspansji przed polskimi producentami. </p></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-</div>
 
 <div class="section section-tabs">
     <div class="container">
@@ -838,7 +733,7 @@ Produkcja leków biopodobnych, na którą stawia Polpharma, jest równie zaawans
 <div class="ml-auto mr-auto">
 
 
-<div class="chart-container" style="position: relative; height:60vh; width:60vw">
+<div class="chart-container" style="position: relative; height:50vh; width:40vw">
                             <canvas id="line-chart0"></canvas>
 </div>
 </div>
@@ -1088,7 +983,7 @@ będą stanowiły właśnie leki generyczne. </p>
 </div>
 </div>
 </div>
-                    <div class="chart-container" style="position: relative; height:60vh; width:60vw">
+                    <div class="chart-container" style="position: relative; height:50vh; width:40vw">
                     <canvas id="bubble-chart"></canvas>
                     </div>
                     <script>
@@ -1431,7 +1326,7 @@ produkcji biotechnologicznej i chemicznej.
   </div>
 </div>
   </div>
-  <div class="chart-container" style="position: relative; height:60vh; width:60vw">
+  <div class="chart-container" style="position: relative; height:50vh; width:40vw">
 
   <canvas id="line-chart1"></canvas>
   </div>
@@ -1976,9 +1871,9 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
 
                             <div class="container">
                               <div class="section text-center">
-<h3> Szukasz pełnej wersji raportu? </h3></br></br>
+<h3> Pełna wersja raportu </h3></br></br>
 <div class="img-hover">
-<a href="#"><img src="./assets/img/raport.jpg" width="140",height="180"></a>
+<a href="#"><img src="./assets/img/raport.jpg" width="240",height="280"></a>
 <!-- <a class="btn btn-default" href="#" role="button">Wersja PDF</a> -->
                             </div>
                           </div>
@@ -2167,11 +2062,11 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
                     </div>
                 </div>
             </div>
-            <div class="section section-contacts">
+            <!-- <div class="section section-contacts">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
                         <h2 class="text-center title">Masz pytanie? Napisz do nas!</h2>
-                        <!-- <h4 class="text-center description">Divide details about your product or agency work into parts. Write a few lines about each one and contact us about any further collaboration. We will responde get back to you in a couple of hours.</h4> -->
+
                         <form class="contact-form">
                             <div class="row">
                                 <div class="col-md-6">
@@ -2212,7 +2107,7 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <footer class="footer ">
         <div class="container">
             <nav class="pull-left">
@@ -2225,7 +2120,20 @@ Polpharma                        </a>
                         <a target="_blank" href="http://www.delab.uw.edu.pl/pl/">
 DELab UW                        </a>
                     </li>
+<li>
+  <a target="_blank" href="https://twitter.com/delabuw" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
 
+</li>
+
+<li>
+
+      <a target="_blank" href="https://www.facebook.com/delabuw" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a>
+
+</li>
+
+<li>
+  <a target="_blank" href="https://www.instagram.com/delabuw" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a>
+</li>
                 </ul>
             </nav>
             <div class="copyright pull-right">DELab UW
