--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@ zostały dostrzeżone i docenione także w krajach wysokorozwiniętych.
 Najlepszym dowodem są tutaj polityki
 lekowe takich krajów jak Niemcy, czy Francja, gdzie
 aktywnie dąży się do zwiększenia udziału zamienników
-w rynku– w 2022 r. 80% wolumenu produkcji leków
+w rynku – w 2022 r. 80% wolumenu produkcji leków
 będą stanowiły właśnie leki generyczne. </p>
 
 <div class="container">
@@ -1426,7 +1426,15 @@ produkcji biotechnologicznej i chemicznej.
   </div>
 
 
+
+
   <div class="container">
+    <p align="justify">
+    </br></br>
+      Na przestrzeni ostatnich lat Polpharma dokonała licznych innowacji produktowych potwierdzonych patentami, polegających na nowatorskich metodach syntezy, nowych sposobach aplikacji leku i bardziej ekologicznych sposobach produkcji. Polpharma wypracowała np. nowe połączenie substancji aktywnych pozwalające na zwiększenie efektywności terapii w postaci Metafenu (połączenie ibuprofenu i paracetamolu, rozwinięte w Polfie Łódź). Co istotne,
+      Polpharma pracuje nad takimi lekami równoważnymi, które odpowiadają na potrzeby starzejącego się społeczeństwa.
+      Warto odnotować, że jednym z pośrednich celów SOR jest motywowanie polskich firm do podejmowania ryzyka inwestycji w innowacyjność: podejmowania współpracy z innymi podmiotami, zwiększania nakładów na badania i rozwój oraz uczestnictwa w grantach badawczych. Dla wszystkich powyższych aktywności Polpharma może posłużyć jako inspirujący przykład, a także lider innowacyjności w sektorze produkcji biotechnologicznej i chemicznej.
+    </p>
   <!-- <div class="section text-center"> -->
   <div class="row">
     <div class="chart-title">
