--- a/index.html
+++ b/index.html
@@ -2118,6 +2118,7 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
             </div>
         </div>
     </div> -->
+  </div>
     <footer class="footer ">
         <div class="container">
             <nav class="pull-left">
