--- a/index.html
+++ b/index.html
@@ -2023,10 +2023,10 @@ sektora farmaceutycznego w powiązaniu z kluczowymi celami gospodarczymi i społ
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 offs">
                             <div class="team-player">
                                 <div class="card card-plain">
-                                    <div class="col-md-6 ml-auto mr-auto">
+                                    <div class="col-md-6 ml-auto mr-auto offs">
                                         <img src="./assets/img/jl.jpg" alt="Thumbnail Image" class="img-raised rounded-circle img-fluid">
                                     </div>
                                     <h4 class="card-title text-center">dr Jacek Lewkowicz
