--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@ będą stanowiły właśnie leki generyczne. </p>
 </div>
 </div>
 </div>
-                    <div class="chart-container" style="position: relative; height:50vh; width:40vw">
+                    <div class="chart-container" style="position: relative; height:50vh; width:50vw">
                     <canvas id="bubble-chart"></canvas>
                     </div>
                     <script>
@@ -1002,7 +1002,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 38,
                                 y: 18,
-                                r: Math.round(3550/8633169*1e5)
+                                r: Math.round(3550/8633169*1e5/2)
 
                               }]
                             }, {
@@ -1012,7 +1012,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 39,
                                 y: 13,
-                                r: Math.round(4708/11274196*1e5)
+                                r: Math.round(4708/11274196*1e5/2)
                               }]
                             }, {
                               label: ["Czechy"],
@@ -1021,7 +1021,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 60,
                                 y: 30,
-                                r: Math.round(2290/10546059*1e5)
+                                r: Math.round(2290/10546059*1e5/2)
                               }]
                             }, {
                               label: ["Dania"],
@@ -1030,7 +1030,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 60,
                                 y: 14,
-                                r: Math.round(2306/5683483*1e5)
+                                r: Math.round(2306/5683483*1e5/2)
                               }]
                             },
                             {
@@ -1040,7 +1040,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 48,
                                 y: 19,
-                                r: Math.round(2246/5479531*1e5)
+                                r: Math.round(2246/5479531*1e5/2)
                               }]
                             },
                             {
@@ -1050,7 +1050,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 52,
                                 y: 22,
-                                r: Math.round(27645/66624068*1e5)
+                                r: Math.round(27645/66624068*1e5/2)
                               }]
                             },
                             {
@@ -1060,7 +1060,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 73,
                                 y: 20,
-                                r: Math.round(30038/81686611*1e5)
+                                r: Math.round(30038/81686611*1e5/2)
                               }]
                             },
                             {
@@ -1070,7 +1070,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 27,
                                 y: 19,
-                                r: Math.round(4058/10820883*1e5)
+                                r: Math.round(4058/10820883*1e5/2)
                               }]
                             },
                             {
@@ -1080,7 +1080,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 53,
                                 y: 27,
-                                r: Math.round(2133/9843028*1e5)
+                                r: Math.round(2133/9843028*1e5/2)
                               }]
                             },
                             {
@@ -1090,7 +1090,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 49,
                                 y: 22,
-                                r: Math.round(1818/4676835*1e5)
+                                r: Math.round(1818/4676835*1e5/2)
                               }]
                             },
                             {
@@ -1100,7 +1100,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 41,
                                 y: 16,
-                                r: Math.round(22703/60730582*1e5)
+                                r: Math.round(22703/60730582*1e5/2)
                               }]
                             },
                             {
@@ -1110,7 +1110,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 75,
                                 y: 45,
-                                r: Math.round(238/1977527*1e5)
+                                r: Math.round(238/1977527*1e5/2)
                               }]
                             },
                             {
@@ -1120,7 +1120,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 66,
                                 y: 22,
-                                r: Math.round(4821/16939923*1e5)
+                                r: Math.round(4821/16939923*1e5/2)
                               }]
                             },
                             {
@@ -1130,7 +1130,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 69,
                                 y: 41,
-                                r: Math.round(5587/37986412*1e5)
+                                r: Math.round(5587/37986412*1e5/2)
                               }]
                             },
                             {
@@ -1140,7 +1140,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 50,
                                 y: 30,
-                                r: Math.round(2933/10358076*1e5)
+                                r: Math.round(2933/10358076*1e5/2)
                               }]
                             },
                             {
@@ -1150,7 +1150,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 57,
                                 y: 23,
-                                r: Math.round(1184/5423801*1e5)
+                                r: Math.round(1184/5423801*1e5/2)
                               }]
                             },
                             {
@@ -1160,7 +1160,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 51,
                                 y: 18,
-                                r: Math.round(15625/46447697*1e5)
+                                r: Math.round(15625/46447697*1e5/2)
                               }]
                             },
                             {
@@ -1170,7 +1170,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 55,
                                 y: 13,
-                                r: Math.round(3809/9799186*1e5)
+                                r: Math.round(3809/9799186*1e5/2)
                               }]
                             },
                             {
@@ -1180,7 +1180,7 @@ będą stanowiły właśnie leki generyczne. </p>
                               data: [{
                                 x: 66,
                                 y: 27,
-                                r: Math.round(22375/65128861*1e5)
+                                r: Math.round(22375/65128861*1e5/2)
                               }]
                             }
                           ]
@@ -1196,15 +1196,21 @@ będą stanowiły właśnie leki generyczne. </p>
                             yAxes: [{
                               scaleLabel: {
                                 display: true,
-                                labelString: "Udział leków generycznych w całości rynku (wartość sprzedaży)"
-                              }
-                            }],
+                                labelString: "% wartości sprzedaży"
+                              },
+                              ticks: {
+                                 min: 5, // minimum value
+                                 max: 50 // maximum value
+                            }}],
                             xAxes: [{
                               scaleLabel: {
                                 display: true,
-                                labelString: "Udział leków generycznych w całości rynku (wolumen sprzedaży)"
-                              }
-                            }]
+                                labelString: "% wolumenu sprzedaży"
+                              },
+                              ticks: {
+                                 min: 20, // minimum value
+                                 max: 80 // maximum value
+                            }}]
                           },
                           responsive: true,
                           maintainAspectRatio: true
@@ -1238,7 +1244,7 @@ będą stanowiły właśnie leki generyczne. </p>
                                       <div class="card-body ">
                                           <div class="tab-content">
                                               <div class="tab-pane active" id="info5">
-                                                  <h5>&#9758; Wielkość kół oznacza wartość rynku farmaceutycznego w danym kraju, mierzoną jako wartość sprzedaży produktów farmaceutycznych w EUR na 100tys. mieszkańców.</br></br>
+                                                  <h5>&#9758; Wielkość kół oznacza wartość rynku farmaceutycznego w danym kraju, mierzoną jako wartość sprzedaży produktów farmaceutycznych w EUR na 50tys. mieszkańców.</br></br>
                                                      &#9758; Pozycja polskiego rynku farmaceutycznego oznaczona jest czerwonym kołem. </br></br>
                                                      <!-- &#9758;  </br></br> -->
 
